# Patch-agent

./: .gitignore  README.md  pyproject.toml
.opencode/agent/: os-merge-expert.md  patch-review-expert.md
.opencode/agents/: patch.md  review.md
src/patch_pipeline/: __init__.py  cli.py  git_apply.py  opencode_client.py  pending_loader.py  pipeline.py  pr_parser.py
src/pending_list/: completed_pr.txt  pending_pr.txt
tests/: test_git_apply.py
